@@ -1,0 +1,3 @@
+MD5 99d17b23d2ea4dc3a008f5c69cd43789 wesnoth-1.2.8.tar.bz2 73123148
+RMD160 f085684005dc02d4fbe7802bdb0844a5a531a5c4 wesnoth-1.2.8.tar.bz2 73123148
+SHA256 6abc75fbb28a2d506a4d152cf79703f3920a8d1021bab32b1583b004c2ab298c wesnoth-1.2.8.tar.bz2 73123148
