@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.108 2007/10/22 04:13:35 kingtaco Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.109 2007/11/26 01:41:33 mr_bones_ Exp $
+
+*wesnoth-1.2.8 (26 Nov 2007)
+
+  26 Nov 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  +wesnoth-1.2.8.ebuild:
+  version bump
 
   22 Oct 2007; Mike Doty <kingtaco@gentoo.org> wesnoth-1.2.7.ebuild:
   amd64 stable, bug 195520
